# SpatialMP4

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  MANIFEST.in  README.md  README_zh.md  pixi.toml  pyproject.toml
.github/workflows/: build_wheels.yml
bindings/: CMakeLists.txt  README.md  spatialmp4.cpp
cmake/: eigen.cmake  ffmpeg_local.cmake  fmt.cmake  gtest.cmake  opencv_host.cmake  pybind11.cmake  sophus.cmake  spdlog.cmake
docs/: ffmpeg.patch  ffmpeg_snippets.md  install_faq.md  legal_header.txt
examples/python/: 01_generate_pcd.py  02_generate_colmap_format.py  generate_pcd.py  vis_pose.py  visualize_open3d.py  visualize_rerun.py
python/tests/: test_reader.py  test_utilities.py
scripts/: build_ffmpeg.sh  cmake.rb  ffmpeg_b6f84cd7.patch  ffmpeg_enc.patch  install_deps.sh  opencv_460_on_macos.patch  opencv_for_new_cmake.patch
src/mp4writer/: main.cc  write.cc  write.h
src/spatialmp4/: data_types.h  reader.cc  reader.h  reader_test.cc  utils.cc  utils.h  version.h.in
src/spatialmp4/utilities/: MeshUtils.cc  OpencvUtils.cc  RgbdUtils.cc  RgbdUtils.h  SyncPose.hpp
src/utilities/: MeshUtils.cc  MeshUtils.h  OpencvUtils.cc  OpencvUtils.h  PointcloudUtils.cc  PointcloudUtils.h  RgbdUtils.cc  RgbdUtils.h  SyncPose.hpp
